--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,52 @@
-   Copyright (C) 2010, 2011, 2012, 2013, 2014, 2015,
+   Copyright (C) 2010, 2011, 2012, 2013, 2014, 2015, 2016,
    Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
+
+Changes from 4.1.3 to 4.1.4
+---------------------------
+
+1. Updated to GNU autoconf 2.69, automake 1.15, gettext 0.19.7,
+   texinfo 6.1, texinfo.tex 2016-02-05.07, libtool 2.4.6.
+
+2. z/OS support updated.
+
+3. At the beginning of each statement, the debugger now checks and
+   reports watchpoints that have fired before checking for breakpoints.
+   This gives more natural behavior to the user.
+
+4. The "exit" command has been added to the debugger as an alias
+   for "quit".
+
+5. AIX 7.1 should pass the test suite now.  Similar for Minix.
+
+6. VMS support has been updated.
+
+7. The profiler / pretty-printer now chains else-if statements instead
+   of causing cascading elses.
+
+8. The return value of system() has been enhanced to convey more information.
+   See the doc.
+
+9. Attempting to write to the "to" end of a two-way pipe that has been
+   closed is now a fatal error. Similarly, so is reading from the "from"
+   end that has been closed.
+
+10. MinGW support has been updated.
+
+11. The -d option now allows -d- to print to standard output.
+
+12. Error messages for --help and in other instances should now get
+    translated correctly.
+
+13. A new environment variable GAWK_LOCALE_DIR may be set to locate the .mo
+    file for gawk itself.
+
+14. The DJGPP port is now officially deprecated.
+
+15. A number of bugs have been fixed. See the ChangeLog.
 
 Changes from 4.1.2 to 4.1.3
 ---------------------------
