--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,27 @@
-   Copyright (C) 2019, Free Software Foundation, Inc.
+   Copyright (C) 2019, 2020 Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
+
+Changes from 5.0.1 to 5.1.0
+---------------------------
+
+1. The major version of the API is bumped to 3, something that should
+   have happened at the 5.0.0 release but didn't.
+
+2. A number of memory leak issues have been fixed.
+
+3. Infrastructure upgrades: Bison 3.5.4, Texinfo 6.7, Gettext 0.20.1,
+   Automake 1.16.2.
+
+4. The indexing in the manual has been thoroughly revised, in particular
+   making use of the facilities in Texinfo 6.7.  That version (or newer)
+   must be used to format the manual.
+
+5. MSYS2 is now supported out-of-the-box by configure.
+
+6. Several bugs have been fixed.  See the ChangeLog for details.
 
 Changes from 5.0.0 to 5.0.1
 ---------------------------
@@ -22,7 +41,7 @@ Changes from 5.0.0 to 5.0.1
 
 6. Infrastructure upgrades: Bison 3.4.
 
-N. A number of bugs, some of them quite significant, have been fixed.
+7. A number of bugs, some of them quite significant, have been fixed.
    See the ChangeLog for details.
 
 Changes from 4.2.1 to 5.0.0
