--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,71 @@
-   Copyright (C) 2019, 2020 Free Software Foundation, Inc.
+   Copyright (C) 2019, 2020, 2021 Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
+
+Changes from 5.1.0 to 5.1.1
+---------------------------
+
+1. Infrastructure upgrades: Bison 3.8, Gettext 0.20.2, Automake 1.16.4,
+   and (will wonders never cease) Autoconf 2.71.
+
+2. asort and asorti now allow FUNCTAB and SYMTAB as the first argument if a
+   second destination array is supplied. Similarly, using either array as
+   the second argument is now a fatal error. Additionally, using either
+   array as the destination for split(), match(), etc. also causes a
+   fatal error.
+
+3. The new -I/--trace option prints a trace of the byte codes as they
+   are executed.
+
+4. A number of subtle bugs relating to MPFR mode that caused differences
+   between regular operation and MPFR mode have been fixed.
+
+5. The API now handles MPFR/GMP values slightly differently, requiring
+   different memory management for those values. See the manual for the
+   details if you have an extension using those values.  As a result,
+   the minor version was incremented.
+
+6. $0 and the fields are now cleared before starting a BEGINFILE rule.
+
+7. The duplication of m4 and build-aux directories between the main
+   directory and the extension directory has been removed. This
+   simplifies the distribution.
+
+8. The test suite has been improved, making it easier to run the entire
+   suite with -M. Use `GAWK_TEST_ARGS=-M make check' to do so.
+
+9. Profiling and pretty-printing output has been modified slightly so
+   that functions are presented in a reasonable order with respect
+   to the namespaces that contain them.
+
+10. Several example programs in the manual have been updated to their
+    modern POSIX equivalents.
+
+11. A number of examples in doc/gawkinet.texi have been updated for
+    current times. Thanks to Juergen Kahrs for the work.
+
+12. Handling of Infinity and NaN values has been improved.
+
+13. There has been a general tightening up of the use of const and
+    of types.
+
+14. The "no effect" lint warnings have been fixed up and now behave
+    more sanely.
+
+15. The manual has been updated with much more information about what is
+    and is not a bug, and the changes in the gawk mailing lists.
+
+16. The behavior of strongly-typed regexp constants when passed as the
+    third argument to sub() or gsub() has been clarified in the code and
+    in the manual.
+
+17. Similar to item #4 above, division by zero is now fatal in MPFR
+    mode, as it is in regular mode.
+
+18. There have been numerous minor code cleanups and bug fixes. See the
+    ChangeLog for details.
 
 Changes from 5.0.1 to 5.1.0
 ---------------------------
