gawk: Autospec creation for update from version 5.2.0 to version 5.2.1
Antonio Giovanni Colombo (1):
      updated CSV messages

Arnold D. Robbins (55):
      Fix a bug with Node_elem_new.
      Additional fix for Node_elem_new.
      Fix a bug with eval in the debugger.
      Bug fix for rwarray.c and doc and test updates.
      Small doc update for \B.
      Fix negative NaN issue on RiscV.
      Completely update the ChangeLog.
      Fix typos in ChangeLog.
      Add pma support for systems without MAP_NORESERVE.
      Update gawkbug.in.
      Yet another fix and test for Node_elem_new.
      Update pc/ChangeLog.
      Rename test/elemnew files to be test/mdim files.
      Documentation update.
      Update Serbian translation (sr.po).
      Disable pma on M1 mac. At least for now.
      Fix a memory leak.
      Small doc fixes.
      Fix a lurking bug in --dump-variables implementation.
      Some edits in ChangeLog.
      Updates to NEWS.
      Fixes and cleanups in symbol.c.
      Documentation updates.
      Fix rwarray:readall issues.
      Update build-aux.
      Update support files.
      Update NEWS.
      Update GNULIB stuff.
      Fix parse-time division by zero check.
      Squashed commit of the following:
      Fix compilation warning.
      Improve handling of .developing file.
      Code simplification in interpret.h.
      Try to get macros to work in the debugger.
      Improve debuggability, mainly for maintainers.
      Update pma to Avon 8.
      Bump patchlevel for beta release.
      Update pl.po.
      NEWS updated.
      Updates for test release.
      Update ko and ro translations.
      Updated bg.po, fr.po, pl.po, sv.po.
      Update pc/Makefile.tst.
      Update de.po, es.po.
      OpenVMS-related cleanups.
      Update zh_CN.po.
      Document awkcc.
      Typo fix in the manual.
      Test tarball.
      Doc updates.
      MYS2 compilation fix.
      Prep for release.
      Update all ChangeLog files.
      Updates after making tar 

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,28 @@
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
 
+Changes from 5.2.0 to 5.2.1
+---------------------------
+
+1. Infrastructure upgrades: PMA version Avon 8.
+
+2. Issues related to the sign of NaN and Inf values on RiscV have
+   been fixed; gawk now gives identical results on that platform as
+   it does on others.
+
+3. A few issues with the debugger have been fixed.
+
+4. More subtle issues with untyped array elements being passed to
+   functions have been fixed.
+
+5. The rwarray extension's readall() function has had some bugs fixed.
+
+6. The PMA allocator is now supported on FreeBSD, OpenBSD and Linux on S/390x.
+   Is is now supported also on both Intel and M1 macOS systems.
+
+7. There have been several minor code cleanups and bug fixes. See the
+   ChangeLog for details.
+
 Changes from 5.1.x to 5.2.0
 ---------------------------
 
