gawk: Autospec creation for update from version 5.2.1 to version 5.2.2
Antonio Giovanni Colombo (3):
      Update to it.po
      dropped a couple of extra lines
      Translated a few missing messages

Arnold D. Robbins (85):
      Start updating files to GPL 3 that weren't.
      Finish updating files to GPL 3 that weren't.
      Remove unnecessary execute permission from a few files.
      Fix install-exec-hook for POSIX mode in GNU make.
      Build pma without assertions by default.
      Switch to grep -E instead of egrep in test suite. Sigh.
      Don't build an x86_64 binary on macOS M1.
      Disallow using / not using -M for multiple invocations with PMA.
      Save/restore freelists to/from the root pointer struct.
      Add PROCINFO["pma"] if PMA is available.
      Typo fix in doc.
      Doc updates and fixes.
      Small doc improvement.
      Preliminary LaTeX support in gawktexi.in.
      Move to Texinfo 7.0.1, add LaTeX support.
      Update texinfo.tex.
      Update support/verify.h.
      Fix testdfa.c.
      Update texinfo.tex.
      Add security restriction on pma use.
      Undeprecate the time extension, add strptime, update tests and doc.
      Yet another fix for Node_elem_new handling.
      Fix field assignment bug.
      Fix getopt.awk long option handling.
      Small fix for undefined behavior.
      Update build-aux files.
      Update support files. Mainly copyright years.
      Small typo fix.
      Fix possible fd leak in readdir extension.
      Add source URL to usage message.
      Small ChangeLog fix.
      Improve finding an input parser.
      Code improvement: RED_NOBUF -> RED_FLUSH.
      Bug fix in boolval.
      Bug fix in typeof, add new test files.
      Small doc fix.
      Improve the doc on input parsers.
      Update sr.po.
      Remove trailing whitespace from a bunch of files.
      Small improvement in gawkmisc.c.
      Small doc improvement.
      Fix memory leak when $a = $b appears in expressions.
      Squashed

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,42 @@
-   Copyright (C) 2019, 2020, 2021, 2022 Free Software Foundation, Inc.
+   Copyright (C) 2019, 2020, 2021, 2022, 2023 Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
+
+Changes from 5.2.1 to 5.2.2
+---------------------------
+
+1. Infrastructure upgrades: makeinfo 7.0.1 must be used to format
+   the manual.  As a result, the manual can also now be formatted
+   with LaTeX by running it through `makeinfo --latex'.
+
+2. Gawk no longer builds an x86_64 executable on M1 macOS systems.
+   This means that PMA is unavailable on those systems.
+
+3. Gawk will now diagnose if a heap file was created with a different
+   setting of -M/--bignum than in the current invocation and exit with
+   a fatal message if so.
+
+4. Gawk no longer "leaks" its free list of NODEs in the heap file, resulting
+   in much more efficient usage of persistent storage.
+
+5. PROCINFO["pma"] exists if the PMA allocator is compiled into gawk.
+   Its value is the PMA version.
+
+6. The time extension is no longer deprecated. The strptime() function
+   from gawkextlib's timex extension has been added to it.
+
+7. Better information is passed to input parsers for when they want to
+   decide whether or not to take control of a file. In particular, the
+   readdir extension is simplified for Windows because of this.
+
+8. The various PNG files are now installed for Info and HTML. The
+   images files now have gawk_ prefixed names to avoid any conflicts
+   with other installed PNG file names.
+
+9. As usual, there have been several minor code cleanups and bug fixes.
+   See the ChangeLog for details.
 
 Changes from 5.2.0 to 5.2.1
 ---------------------------
@@ -21,7 +55,7 @@ Changes from 5.2.0 to 5.2.1
 5. The rwarray extension's readall() function has had some bugs fixed.
 
 6. The PMA allocator is now supported on FreeBSD, OpenBSD and Linux on S/390x.
-   Is is now supported also on both Intel and M1 macOS systems.
+   It is now supported also on both Intel and M1 macOS systems.
 
 7. There have been several minor code cleanups and bug fixes. See the
    ChangeLog for details.
