gawk: Autospec creation for update from version 5.3.0 to version 5.3.1
Andrew J. Schorr (2):
      Add a comment to gawkapi.h suggesting that do_flags should be a bitmask if we ever change it again.
      Patch gawk.texi to include typeof and mkbool in list of gawk-only

Antonio Giovanni Colombo (3):
      Declared the it.po file UTF-8
      Update to it.po
      modified @nsinclude message

Arnold D. Robbins (102):
      Tiny doc fix.
      Typo fix in NEWS.
      Fixes in gawk.1, fix Spelling of Antonio Colombo's name.
      Fix string/regex comparisons.
      Small doc fix.
      Clean up "double quote" and "single quote" in the manual.
      Remove a stupid use of _().
      Make type of plain a[1] smarter, add doc and tests.
      Small typo fixes in the manual.
      Bug fix in debug.c.
      Fix text for strptime() in the manual.
      Add test for debugger array printing.
      Add the actual debugger array printing test files.
      Doc fix, refer to gawk.texi not gawktexi.in.
      Attempt to close SIGPIPE race condition.
      Additional fix in printing arrays from the debugger.
      Fix yet another array printing bug in the debugger.
      Fix core dump on debugger watchpoints.
      Make GAWK_READ_TIMEOUT work correctly.
      Fix a compiler warning.
      Fixes in the API and its doc.
      Typo fix in the doc.
      Use same time system call in gawk and in time extension.
      Small fix in extension/time.c.
      Reenabled MPFR on Power PC macos.
      Update NEWS.
      Update sr.po.
      Doc update on strftime and flags.
      Bug fix in str2wstr.
      Improve build cleanup.
      Doc update on inplace extension.
      Small edit in ChangeLog.
      Small fixes in ChangeLog.
      Another attempt to close SIGPIPE races. Update copyrights and pc config.
      Spelling fixes.
      Some small fixes pulled in from minrx changes.
      Doc update for inplace extension.
      Bug fix for string subscripts.
      Mention the help-gawk list in the manp

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,37 @@
-   Copyright (C) 2019, 2020, 2021, 2022, 2023 Free Software Foundation, Inc.
+   Copyright (C) 2019, 2020, 2021, 2022, 2023, 2024
+   Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.
+
+Changes from 5.3.0 to 5.3.1
+---------------------------
+
+1. More subtle issues related to uninitialized array elements have
+   been fixed.
+
+2. A number of bugs in the debugger related to handling of arrays
+   have been fixed.
+
+3. Some subtle bugs in the API have been fixed.
+
+4. Use of MPFR is now possible again on 32-bit Power PC Mac systems.
+
+5. Race conditions around broken pipes for system() and read and write
+   pipes should now be closed off.
+
+6. Support for OSF/1 has been removed.
+
+7. The never-documented --nostalgia option has been removed. It was
+   causing bug reports.
+
+8. The implementation of printf/sprintf has been thoroughly reworked
+   in order to make the code more maintainable and to fix a goodly
+   number of corner cases.
+
+9. As usual, there have been several minor code cleanups and bug fixes.
+   See the ChangeLog for details.
 
 Changes from 5.2.x to 5.3.0
 ---------------------------
@@ -44,7 +73,7 @@ Changes from 5.2.2 to 5.2.x
    features, see the manual or its man page. As a result, the
    readdir_test.c extension has been removed.
 
-2. We have a new translation: Ukranian.
+2. We have a new translation: Ukrainian.
 
 3. Several subtle issues related to null regexp matches around
    multibyte characters have been fixed.
